Fixed offset in convertSongToDataFrame.

--- a/Conversion.ipynb
+++ b/Conversion.ipynb
@@ -225,75 +225,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          0    1         2     3     4\n",
-      "0   A major  4/4         I  0.50  0.00\n",
-      "1   A major  4/4     ii542  0.50  0.50\n",
-      "2   A major  4/4         I  0.50  0.00\n",
-      "3   A major  4/4       I42  0.50  0.50\n",
-      "4   A major  4/4       IV6  1.00  1.00\n",
-      "5   A major  4/4         V  0.50  2.00\n",
-      "6   A major  4/4      iii6  0.50  2.50\n",
-      "7   A major  4/4        ii  0.50  3.00\n",
-      "8   A major  4/4     viio6  0.50  3.50\n",
-      "9   A major  4/4        I6  0.50  0.00\n",
-      "10  A major  4/4      I752  0.50  0.50\n",
-      "11  A major  4/4         V  1.00  1.00\n",
-      "12  A major  4/4         I  1.00  2.00\n",
-      "13  A major  4/4         I  0.50  3.00\n",
-      "14  A major  4/4       I42  0.50  3.50\n",
-      "15  A major  4/4        vi  0.50  0.00\n",
-      "16  A major  4/4      vi42  0.50  0.50\n",
-      "17  A major  4/4      ii65  0.50  1.00\n",
-      "18  A major  4/4        I6  0.50  1.50\n",
-      "19  A major  4/4       ii7  0.50  2.00\n",
-      "20  A major  4/4         I  0.50  2.50\n",
-      "21  A major  4/4       V65  0.50  3.00\n",
-      "22  A major  4/4        V6  0.50  3.50\n",
-      "23  A major  4/4        I6  0.50  0.00\n",
-      "24  A major  4/4       iv4  0.25  0.50\n",
-      "25  A major  4/4         I  0.25  0.75\n",
-      "26  A major  4/4        V7  0.50  1.00\n",
-      "27  A major  4/4     ii752  0.50  1.50\n",
-      "28  A major  4/4         I  1.00  2.00\n",
-      "29  A major  4/4         I  0.50  3.00\n",
-      "..      ...  ...       ...   ...   ...\n",
-      "66  A major  4/4  bVII#7#3  0.50  0.00\n",
-      "67  A major  4/4        v6  0.50  0.50\n",
-      "68  A major  4/4    VI75#3  0.50  1.00\n",
-      "69  A major  4/4   IV+65#3  0.25  1.50\n",
-      "70  A major  4/4        VI  0.25  1.75\n",
-      "71  A major  4/4        ii  1.00  2.00\n",
-      "72  A major  4/4        V6  1.00  3.00\n",
-      "73  A major  4/4         I  0.50  0.00\n",
-      "74  A major  4/4       I42  0.50  0.50\n",
-      "75  A major  4/4       IV6  1.00  1.00\n",
-      "76  A major  4/4         V  1.00  2.00\n",
-      "77  A major  4/4       IV6  0.50  3.00\n",
-      "78  A major  4/4    vii/o7  0.50  3.50\n",
-      "79  A major  4/4         I  1.00  0.00\n",
-      "80  A major  4/4      ii64  0.50  1.00\n",
-      "81  A major  4/4      vii7  0.25  1.50\n",
-      "82  A major  4/4   #vo6b33  0.25  1.75\n",
-      "83  A major  4/4        vi  1.00  2.00\n",
-      "84  A major  4/4        vi  0.50  3.00\n",
-      "85  A major  4/4      vi42  0.50  3.50\n",
-      "86  A major  4/4       ii6  0.50  0.00\n",
-      "87  A major  4/4   vii/o43  0.50  0.50\n",
-      "88  A major  4/4        I6  1.00  1.00\n",
-      "89  A major  4/4       ii7  0.50  2.00\n",
-      "90  A major  4/4      iv62  0.50  2.50\n",
-      "91  A major  4/4       V42  1.00  3.00\n",
-      "92  A major  4/4        I6  0.50  0.00\n",
-      "93  A major  4/4        IV  0.50  0.50\n",
-      "94  A major  4/4         V  1.00  1.00\n",
-      "95  A major  4/4         I  1.00  2.00\n",
+      "          0    1         2     3      4\n",
+      "0   A major  4/4         I  0.50   0.00\n",
+      "1   A major  4/4     ii542  0.50   0.50\n",
+      "2   A major  4/4         I  0.50   1.00\n",
+      "3   A major  4/4       I42  0.50   1.50\n",
+      "4   A major  4/4       IV6  1.00   2.00\n",
+      "5   A major  4/4         V  0.50   3.00\n",
+      "6   A major  4/4      iii6  0.50   3.50\n",
+      "7   A major  4/4        ii  0.50   4.00\n",
+      "8   A major  4/4     viio6  0.50   4.50\n",
+      "9   A major  4/4        I6  0.50   5.00\n",
+      "10  A major  4/4      I752  0.50   5.50\n",
+      "11  A major  4/4         V  1.00   6.00\n",
+      "12  A major  4/4         I  1.00   7.00\n",
+      "13  A major  4/4         I  0.50   8.00\n",
+      "14  A major  4/4       I42  0.50   8.50\n",
+      "15  A major  4/4        vi  0.50   9.00\n",
+      "16  A major  4/4      vi42  0.50   9.50\n",
+      "17  A major  4/4      ii65  0.50  10.00\n",
+      "18  A major  4/4        I6  0.50  10.50\n",
+      "19  A major  4/4       ii7  0.50  11.00\n",
+      "20  A major  4/4         I  0.50  11.50\n",
+      "21  A major  4/4       V65  0.50  12.00\n",
+      "22  A major  4/4        V6  0.50  12.50\n",
+      "23  A major  4/4        I6  0.50  13.00\n",
+      "24  A major  4/4       iv4  0.25  13.50\n",
+      "25  A major  4/4         I  0.25  13.75\n",
+      "26  A major  4/4        V7  0.50  14.00\n",
+      "27  A major  4/4     ii752  0.50  14.50\n",
+      "28  A major  4/4         I  1.00  15.00\n",
+      "29  A major  4/4         I  0.50  16.00\n",
+      "..      ...  ...       ...   ...    ...\n",
+      "66  A major  4/4  bVII#7#3  0.50  37.00\n",
+      "67  A major  4/4        v6  0.50  37.50\n",
+      "68  A major  4/4    VI75#3  0.50  38.00\n",
+      "69  A major  4/4   IV+65#3  0.25  38.50\n",
+      "70  A major  4/4        VI  0.25  38.75\n",
+      "71  A major  4/4        ii  1.00  39.00\n",
+      "72  A major  4/4        V6  1.00  40.00\n",
+      "73  A major  4/4         I  0.50  41.00\n",
+      "74  A major  4/4       I42  0.50  41.50\n",
+      "75  A major  4/4       IV6  1.00  42.00\n",
+      "76  A major  4/4         V  1.00  43.00\n",
+      "77  A major  4/4       IV6  0.50  44.00\n",
+      "78  A major  4/4    vii/o7  0.50  44.50\n",
+      "79  A major  4/4         I  1.00  45.00\n",
+      "80  A major  4/4      ii64  0.50  46.00\n",
+      "81  A major  4/4      vii7  0.25  46.50\n",
+      "82  A major  4/4   #vo6b33  0.25  46.75\n",
+      "83  A major  4/4        vi  1.00  47.00\n",
+      "84  A major  4/4        vi  0.50  48.00\n",
+      "85  A major  4/4      vi42  0.50  48.50\n",
+      "86  A major  4/4       ii6  0.50  49.00\n",
+      "87  A major  4/4   vii/o43  0.50  49.50\n",
+      "88  A major  4/4        I6  1.00  50.00\n",
+      "89  A major  4/4       ii7  0.50  51.00\n",
+      "90  A major  4/4      iv62  0.50  51.50\n",
+      "91  A major  4/4       V42  1.00  52.00\n",
+      "92  A major  4/4        I6  0.50  53.00\n",
+      "93  A major  4/4        IV  0.50  53.50\n",
+      "94  A major  4/4         V  1.00  54.00\n",
+      "95  A major  4/4         I  1.00  55.00\n",
       "\n",
       "[96 rows x 5 columns]\n"
      ]
@@ -302,20 +302,21 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.DataFrame()\n",
-    "\n",
-    "currentKeySignature = None\n",
-    "currentTimeSignature = None\n",
-    "for measure in chords.measures(0, None, collect=('TimeSignature','KeySignature')):\n",
-    "    if measure.keySignature:\n",
-    "        currentKeySignature = measure.keySignature\n",
-    "    if measure.timeSignature:\n",
-    "        currentTimeSignature = measure.timeSignature.ratioString\n",
-    "    for i in measure.iter:\n",
-    "        if type(i) is chord.Chord:\n",
-    "            df2 = pd.DataFrame([currentKeySignature, currentTimeSignature, roman.romanNumeralFromChord(i, currentKeySignature).figure, i.duration.quarterLength, i.offset])\n",
-    "            df = df.append(df2[0], ignore_index = True)\n",
-    "print(df)"
+    "def convertSongToDataFrame(song):\n",
+    "    df = pd.DataFrame()\n",
+    "    \n",
+    "    currentKeySignature = None\n",
+    "    currentTimeSignature = None\n",
+    "    for measure in song.measures(0, None, collect=('TimeSignature','KeySignature')):\n",
+    "        if measure.keySignature:\n",
+    "            currentKeySignature = measure.keySignature\n",
+    "        if measure.timeSignature:\n",
+    "            currentTimeSignature = measure.timeSignature.ratioString\n",
+    "        for i in measure.iter:\n",
+    "            if type(i) is chord.Chord:\n",
+    "                df2 = pd.DataFrame([currentKeySignature, currentTimeSignature, roman.romanNumeralFromChord(i, currentKeySignature).figure, i.duration.quarterLength, i.offset + measure.offset])\n",
+    "                df = df.append(df2[0], ignore_index = True)\n",
+    "    return df"
    ]
   },
   {
