Made file paths relative.

--- a/Generated_Scores.ipynb
+++ b/Generated_Scores.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -56,14 +56,14 @@
    ],
    "source": [
     "\n",
-    "gen1 = converter.parse('/Users/errpo/Desktop/1st gen (t+5 min)/1st gen (t+5 min)/2017-12-06_010940_01.mid')\n",
+    "gen1 = converter.parse('./1st gen (t+5 min)/1st gen (t+5 min)/2017-12-06_010940_01.mid')\n",
     "type(gen1)\n",
     "gen1.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -83,14 +83,14 @@
     }
    ],
    "source": [
-    "gen2 = converter.parse('/Users/errpo/Desktop/2nd gen (t+20 min)/2nd gen (t+20 min)/2017-12-06_012351_01.mid')\n",
+    "gen2 = converter.parse('./2nd gen (t+20 min)/2nd gen (t+20 min)/2017-12-06_012351_01.mid')\n",
     "type(gen2)\n",
     "gen2.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
     }
    ],
    "source": [
-    "gen3 = converter.parse('/Users/errpo/Desktop/3rd gen (t+1 hr)/3rd gen (t+1 hr)/2017-12-06_022944_01.mid')\n",
+    "gen3 = converter.parse('./3rd gen (t+1 hr)/3rd gen (t+1 hr)/2017-12-06_022944_01.mid')\n",
     "type(gen3)\n",
     "gen3.show()"
    ]
